- add `CONVENTIONS.md`
- fix window flag bugs (macOS)
- RGFW_window_maximize uses `toggleFullScreen` if the window has no border (macOS)
- skip x11 mouse button events if the mouse button > 5
- fix RGFW_window_eventWait, make sure RGFW_eventWaitNext is converted if it needs to be, ensure the correct time is used, (winapi, cocoa)

Release:    RGFW 1.5 (Jan 14, 2024)
-----------------------------------------------
This may not include all of the changes or breaking changes made.
This is because 1.5 is the first release and I started taking releases and release notes more seriously. 

In later commits, the CHANGELOG will be updated while the release is being worked on.
1.5 also has many breaking changes. These are essential changes for API consistency and to expose functionality better. Later releases will aim to have fewer breaking commits. I wanted to get as many of these changes out of the way while the project is still relatively new.

major changes:
    - gamepad rewrite
    - keycode rewrite
    - macOS gamepad support
    - RGFW_allocator, RGFW_createWindowPtr and better memory control
    - monitor refinement
    - A lot of bug fixes

breaking changes:
    - gamepad rewrite changes JS/Joystick -> gamepad
    - clipboard is now freed by RGFW
    - rewrite keymods/ledState -> modState (Control, Shift, numlock, capslock, alt)
    - RGFW_window_setMouse -> RGFW_loadMouse, RGFW_window_setMouse, RGFW_freeMouse
    - make enum naming more consistent, make window args enums
        RGFW_Key -> RGFW_key
        RGFW_Control -> RGFW_control (for example)
        
        RGFW_(ARG) -> RGFW_window(Arg) 
        RGFW_CENTER -> RGFW_windowCenter
    - RGFW_window_setMouse -> RGFW_loadMouse, RGFW_window_setMouse, RGFW_freeMouse


all changes:

new features:
- RGFW_setClassName, allows program class (grouping) to be set 
- start of MacOS EGL support
- add support for loading a icon from a .rc file
- add RGFW_allocator for runtime changes to allocator