@@ -29,6 +29,7 @@ Current Version: RGFW 1.5.5-dev
 - RGFW_window_maximize uses `toggleFullScreen` if the window has no border (macOS)
 - skip x11 mouse button events if the mouse button > 5
 - fix RGFW_window_eventWait, make sure RGFW_eventWaitNext is converted if it needs to be, ensure the correct time is used, (winapi, cocoa)
+- add support for extra mouse buttons RGFW_mouseMisc1 - RGFW_mouseMisc5
 
 Release:    RGFW 1.5 (Jan 14, 2024)
 -----------------------------------------------
